More presentation fine-tuning on sparql form

--- a/elda-assets/src/main/webapp/velocity/css/qonsole.css
+++ b/elda-assets/src/main/webapp/velocity/css/qonsole.css
@@ -103,7 +103,9 @@ footer p {
 }
 
 .qonsole #results-block {
+  border-top: 1px solid #e8eaf6;
   margin-top: 10px;
+  padding-top: 10px;
 }
 
 /* Custom buttons */
