Added page footer, with processor metadata

--- a/elda-assets/src/main/webapp/velocity/index.vm
+++ b/elda-assets/src/main/webapp/velocity/index.vm
@@ -38,9 +38,7 @@
 
       #parse( "partials/qonsole.vm" )
 
-      <footer>
-        <p>&copy; Company 2014</p>
-      </footer>
+      #parse( "partials/footer.vm" )
     </div> <!-- /container -->
 
   </body>
