Added extension point to allow additional content in document head for issue #87

--- a/elda-assets/src/main/webapp/velocity/index.vm
+++ b/elda-assets/src/main/webapp/velocity/index.vm
@@ -26,6 +26,7 @@
       <script src="${assets}/js/vendor/jquery.xdomainrequest.js"></script>
     <![endif]-->
 
+    #parse( "partials/head-extensions.vm" )
   </head>
 
   <body>
