Add links to remove current filters to the view menu

--- a/elda-assets/src/main/webapp/velocity/index.vm
+++ b/elda-assets/src/main/webapp/velocity/index.vm
@@ -35,9 +35,9 @@
     <div class="container">
       #parse( "partials/item-setup.vm")
 
-      ##parse( "partials/debug-context.vm" )
-
       #parse( "partials/qonsole.vm" )
+
+      #parse( "partials/debug-context.vm" )
 
       #parse( "partials/footer.vm" )
     </div> <!-- /container -->
