--- a/elda-assets/src/main/webapp/velocity/partials/view-links.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/view-links.vm
@@ -2,9 +2,17 @@
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">view<b class="caret"></b></a>
   <ul class="dropdown-menu">
-    <li role="presentation" class="dropdown-header">Avilable views:</li>
+    <li role="presentation" class="dropdown-header">Available views:</li>
     #foreach( $view in $page.views() )
       #viewLink( $view )
+    #end
+
+    #set( $removalLinks = $page.filterRemovalLinks() )
+    #if( !$removalLinks.isEmpty() )
+      <li role="presentation" class="dropdown-header">Remove current filter:</li>
+      #foreach( $link in $removalLinks )
+        #removalLink( $link )
+      #end
     #end
   </ul>
 </li>
