Bug fix: dropdown menus should not be occluded by map elements

--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -15,6 +15,10 @@ h1 .navbar-brand {
   padding-left: 20px;
 }
 
+.navbar .dropdown-menu {
+  z-index: 10000;
+}
+
 /* RDF resource presentation */
 
 section {
