--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -1,5 +1,6 @@
 /* General styles */
 body {
+  padding-top: 60px;
 }
 
 /* Navigation bar */
@@ -17,6 +18,19 @@ h1 .navbar-brand {
 
 .navbar .dropdown-menu {
   z-index: 10000;
+}
+
+.navbar-default {
+  background: linear-gradient( #8c9eff, #8c9eff 80%, rgba(140, 158, 255, 0.3) );
+}
+
+.navbar {
+  border: 0;
+  border-radius: 0;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
 }
 
 /* RDF resource presentation */
