--- a/elda-assets/src/main/webapp/velocity/partials/format-links.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/format-links.vm
@@ -1,6 +1,6 @@
 ## Add links for the various formats that the page is available in
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">data format<b class="caret"></b></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-file-code-o"></i> data format<b class="caret"></b></a>
   <ul class="dropdown-menu">
     <li role="presentation" class="dropdown-header">
       Show results as:
