--- a/elda-assets/src/main/webapp/velocity/partials/page-size-links.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/page-size-links.vm
@@ -2,7 +2,7 @@
 ## sizes, and the next/prev/first page links
 #if ($page.hasPageData() )
   <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">results<b class="caret"></b></a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-file-o"></i> page<b class="caret"></b></a>
     <ul class="dropdown-menu">
       #if( $page.itemsPerPage() > 0 )
         #pageSizeLink( $page, "1" )
