--- a/elda-assets/src/main/webapp/velocity/partials/resource-links.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/resource-links.vm
@@ -1,7 +1,7 @@
 ## Show links to the resources on this page
 #if( !$page.isItemEndpoint())
   <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">on this page ... <b class="caret"></b></a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-arrow-right"></i> on this page ... <b class="caret"></b></a>
     <ul class="dropdown-menu">
       #foreach( $item in $page.items())
         <li>
