--- a/elda-assets/src/main/webapp/velocity/partials/view-links.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/view-links.vm
@@ -1,6 +1,6 @@
 ## Add links to the various views that are defined on the current page
 <li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">view<b class="caret"></b></a>
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-search"></i> view<b class="caret"></b></a>
   <ul class="dropdown-menu">
     <li role="presentation" class="dropdown-header">Available views:</li>
     #foreach( $view in $page.views() )
