Hook for overriding individual macro defs

--- a/elda-assets/src/main/webapp/velocity/index.vm
+++ b/elda-assets/src/main/webapp/velocity/index.vm
@@ -1,3 +1,4 @@
+#parse( "partials/overrides.vm" )
 #parse( "partials/global-constants.vm" )
 #parse( "partials/content-detection.vm" )
 
@@ -44,3 +45,5 @@
 
   </body>
 </html>
+
+
