Tweak to set page padding top to current height of nav bar

--- a/elda-assets/src/main/webapp/velocity/partials/javascript-dependencies.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/javascript-dependencies.vm
@@ -76,6 +76,7 @@ require( ['require'],
        'app/qonsole',
        'datatables',
        'app/popover',
+       'app/events'
        #if( $mapDisplay && !$noOSMLibs )
          , 'app/maps'
        #end
