--- a/css/site-local.css
+++ b/css/site-local.css
@@ -28,3 +28,48 @@
 	font-size: smaller;
 	margin-left: 1em;
 }
+
+/* Table of contents */
+
+#toc, .toc, .mw-warning {
+    font-size: 95%;
+    padding: 5px;
+}
+#toc h2, .toc h2 {
+    border: medium none;
+    display: inline;
+    font-size: 100%;
+    font-weight: bold;
+    padding: 0;
+}
+#toc #toctitle, .toc #toctitle, #toc .toctitle, .toc .toctitle {
+    text-align: center;
+}
+#toc ul, .toc ul {
+    list-style-image: none;
+    list-style-type: none;
+    margin-left: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    text-align: left;
+}
+#toc ul ul, .toc ul ul {
+    margin: 0 0 0 2em;
+}
+#toc .toctoggle, .toc .toctoggle {
+    font-size: 94%;
+}
+
+#toc ul li {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+#toc-container {
+  margin-bottom: 10px;
+  float: right;
+  margin-left: 20px;
+  border: 1px solid #aaa;
+  background-color: #eee;
+  padding: 10px;
+}
