--- a/css/site-local.css
+++ b/css/site-local.css
@@ -29,6 +29,10 @@
 	margin-left: 1em;
 }
 
+pre {
+  white-space: pre-line;
+}
+
 /* Table of contents */
 
 #toc, .toc, .mw-warning {
@@ -73,3 +77,16 @@
   background-color: #eee;
   padding: 10px;
 }
+
+/* Syntax highlighting tweaks */
+
+/*Make line numbers unselectable: excludes line numbers from copy-paste user ops*/
+.highlight .lineno {-webkit-user-select: none;-moz-user-select: none; -o-user-select: none;}
+
+/*Override text selection highlighting for linenos*/
+.lineno::-moz-selection {background-color: transparent;}/*Mozilla specific*/
+.lineno::selection {background-color: transparent;}/*Other major browsers*/
+
+.highlight .lineno { color: #999; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; }
+.highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
+
