--- a/elda-assets/src/main/webapp/velocity/partials/navigation-bar.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/navigation-bar.vm
@@ -1,7 +1,7 @@
 #parse( "macros/navigation.vm" )
 
 <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -22,5 +22,5 @@
         #parse( "partials/view-links.vm" )
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  </div><!-- /.container -->
 </nav>
