--- a/elda-standalone/src/main/webapp/_errors/query_parse_exception.vm
+++ b/elda-standalone/src/main/webapp/_errors/query_parse_exception.vm
@@ -1,14 +1,14 @@
 <html>
 <head>
-<title>bad request</title>
+<title>bad query</title>
 
 <style> body { background-color: pink } </style>
 
 </head>
 <body>
-<h1>Bad Request</h1>
+<h1>Query parse problem</h1>
 
-Your request was ill-formed.
+The generated query was ill-formed.
 
 {{message}} 
 
