WIP: adding table of contents via JS

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,8 @@
           <span class="icon-bar"></span>
         </button>
         <div class="navbar-brand">
-          <h1>Elda {{ site.data.version.CURRENT_RELEASE }}</h1>
-          <h2>An implementation of the linked-data API</h2>
+          <h1 class='no-toc'>Elda {{ site.data.version.CURRENT_RELEASE }}</h1>
+          <h2 class='no-toc'>An implementation of the linked-data API</h2>
         </div>
       </div>
 
