Added links to different versions of Elda.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,10 @@
           <span class="icon-bar"></span>
         </button>
         <div class="navbar-brand">
-          <h1>Elda {{ site.data.version.CURRENT_RELEASE }}</h1>
+          <h1>
+			Elda {{ site.data.version.CURRENT_RELEASE }} 
+			<a href="docs/versions.html">[other versions]</a>
+			</h1>
           <h2>An implementation of the linked-data API</h2>
         </div>
       </div>
