--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
     <meta name="description" content="{{ site.description }}">
 
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
