Ensure link to home page always works, independently of page URL

--- a/_includes/nav-menu.html
+++ b/_includes/nav-menu.html
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav">
-  <li class=""><a href="../index.html"><i class="fa fa-home"></i></a></li>
+  <li class=""><a href="{{ site.baseurl }}/index.html"><i class="fa fa-home"></i></a></li>
   <li class="{% if page.url contains 'index.html' %}active{% endif %}"><a href="index.html">Quick start</a></li>
   <li class="{% if page.url contains 'reference.html' %}active{% endif %}"><a href='reference.html'>Reference</a></li>
   <li class="{% if page.url contains 'cribsheet.html' %}active{% endif %}"><a href='cribsheet.html'>Cribsheet</a></li>
