Fix missing forward slash in constructed URL

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 
   {% if page.releaseVersion %}
     <p>
-      See the <a href="{{ site.baseurl }}docs/E{{ page.releaseVersion }}">documentation specific to this version</a>.
+      See the <a href="{{ site.baseurl }}/docs/E{{ page.releaseVersion }}">documentation specific to this version</a>.
     </p>
   {% endif %}
 
