Moved error pages to a directory with the named expected by the ErrorPages class for Velocity paths. Added some shared styling mostly to show that it's possible.

--- a/elda-standalone/src/main/webapp/_error_pages/velocity/_error.vm
+++ b/elda-standalone/src/main/webapp/_error_pages/velocity/_error.vm
@@ -2,7 +2,7 @@
 <head>
 <title>internal error</title>
 
-<style> body { background-color: pink } </style>
+#parse("head.vm")
 
 </head>
 <body>
@@ -11,7 +11,9 @@
 An internal error occurred and there was no error
 page to handle it. 
 
-{{message}} 
+<pre>
+$_message.spelling()
+</pre>
 
 </body>
 </html>
