--- a/elda-standalone/src/main/webapp/_error_pages/velocity/velocity_rendering.vm
+++ b/elda-standalone/src/main/webapp/_error_pages/velocity/velocity_rendering.vm
@@ -2,13 +2,15 @@
 <head>
 <title>velocity rendering problem</title>
 
-<style> body { background-color: pink } </style>
+#parse("head.vm")
 
 </head>
 <body>
 <h1>velocity rendering problem</h1>
 
-{{message}} 
+<pre>
+$_message.spelling()
+</pre>
 
 </body>
 </html>
