--- a/elda-common/src/main/webapp/_error_pages/velocity/exception.vm
+++ b/elda-common/src/main/webapp/_error_pages/velocity/exception.vm
@@ -2,13 +2,19 @@
 <head>
 <title>internal error</title>
 
-<style> body { background-color: pink } </style>
+#parse("head.vm")
 
 </head>
 <body>
 <h1>Internal error</h1>
 
-Sorry, Elda couldn't handle that query. 
+Something broke. Sorry.
+
+#if($verbose)
+<pre>
+$_message.spelling()
+</pre>
+#end
 
 </body>
 </html>
